--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container main__container">
             <div class="main__logo-container">
                 <img class="main__logo" src="img/minecraft_logo.png" alt="MINECRAFT">
-                <span>This is a CULT now!</span>
+                <span>huge things brewing!</span>
             </div>
 
             <div class="main__buttons">
@@ -69,8 +69,8 @@
                             <div class="server__item-name">
                                 <span>[New]  SolCraft.world  -  1.20</span>
                                 <div class="server__item-motd">
-                                    <span>Sample  Message  of  the  Day  Line  1</span>
-                                    <span>Sample  Message  of  the  Day  Line  2</span>
+                                    <span>Work in progress!</span>
+                                    <span>Server metrics are pulled from Hypixel btw</span>
                                 </div>
                             </div>
                         </div>
@@ -154,7 +154,7 @@
                     </a>
                 </div>
             </div>
-            <div class="mobile__corner"><span>Made with love<br>by $minecraft community.</span></div>
+            <div class="mobile__corner"><span>Made  with  love  <br>by  $minecraft  community.</span></div>
         </div>
     </section>
     <script src="js/main.js"></script>
