--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                 <span>[New]  SolCraft.world  -  1.20</span>
                                 <div class="server__item-motd">
                                     <span>Work in progress!</span>
-                                    <span>Server metrics are pulled from Hypixel btw</span>
+                                    <span>server soon</span>
                                 </div>
                             </div>
                         </div>
